<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="7"
    android:background="@android:color/transparent"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical"
    android:padding="8dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="4dp">

        <ImageView
            android:id="@+id/galleryImage"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo" />

    </LinearLayout>


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:scrollHorizontally="true"
        android:shadowRadius="1.0"
        android:text="@string/title"
        android:textColor="#090909"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:ellipsize="end"
        android:maxLines="2"
        android:minLines="2"
        android:scrollHorizontally="true"
        android:text="@string/description"
        android:textColor="#090909"
        android:textSize="16sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_author"
                android:textColor="#ba0508"
                android:textSize="15sp" />

        </LinearLayout>


        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/time"
            android:textColor="#ba0508"
            android:textSize="14sp" />

    </LinearLayout>
</LinearLayout>
