<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="e.android.dramaalert.MainActivity"
    android:orientation="vertical">
<LinearLayout
    android:layout_width ="match_parent"
    android:layout_height ="wrap_content"
    android:orientation="vertical"
    android:padding="50dp"
    android:background="@color/colorPrimaryDark">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="#fff"
        android:text="@string/welcome"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="15sp"
        android:text="@string/about_welcome"
        android:layout_marginTop="25dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonstyle"
            android:text="@string/learn_more"
            android:textColor="#fff" />

        <Button
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonstyle"
            android:text="@string/join_the_club"
            android:textColor="#fff"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>

    <LinearLayout
        android:gravity ="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_person_black_24dp" />

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_lock_black_24dp" />

        <Button
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/buttons"
            android:text="@string/login"
            android:textColor="#fff"
            />
    </LinearLayout>


</LinearLayout>
